<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    tools:context=".MessageActivity">

    <RelativeLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            android:fitsSystemWindows="true"
            android:id="@+id/appBar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_toLeftOf="@+id/profile_pic">

            <TextView
                android:id="@+id/username"
                android:layout_width="300dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="Adil A"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="is offline"
                android:textColor="#777"
                android:layout_below="@+id/username"/>

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userimg"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/profile_name"
            android:padding="5dp"
            android:src="@mipmap/image_select_foreground"/>

    </RelativeLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="5dp"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar_layout"
        android:layout_above="@+id/type_msg_layout"/>
    
    <RelativeLayout
        android:id="@+id/type_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/send_msg"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/send_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_outline_photo_camera_24"/>
        <EditText
            android:id="@+id/text_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="Type a Message..."
            android:background="@color/colorAccent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/send_img"
            android:layout_toLeftOf="@+id/btn_send"/>

        <ImageView
            android:id="@+id/btn_send"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_send_24"/>

    </RelativeLayout>


</RelativeLayout>