<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bar_layout"
            android:background="@drawable/toolbar_background"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:id="@+id/appBar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_menu_24"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="BistroChat"
                android:gravity="center"
                android:layout_centerInParent="true"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <LinearLayout
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/search_bar">

                <ImageView
                    android:id="@+id/search_badge"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_baseline_search_24"/>

                <EditText
                    android:id="@+id/searchbar"
                    android:layout_toRightOf="@+id/search_badge"
                    android:layout_toLeftOf="@id/profile_img"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Search"
                    android:inputType="textCapWords"
                    android:background="#FFF"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_img"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:src="@mipmap/image_select_foreground"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:clickable="true"
        app:itemTextColor="#FF0000"
        android:layout_gravity="start"
        app:menu="@menu/menu"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv"/>

</androidx.drawerlayout.widget.DrawerLayout>