<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Log out"
        android:icon="@mipmap/logout"
        android:id="@+id/logout_btn_drawer"
        />
</menu>